WIP Actionbar added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">VE Assignment</string>
+    <string name="app_name">Tracksphere</string>
     <string name="title_home">Home</string>
     <string name="title_trace">Trace</string>
     <string name="title_planner">Planner</string>
