WIP Additional ui elements being added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="title_more">More</string>
     <string name="search">Search</string>
     <string name="notifications">Notifications</string>
+    <string name="running">Running</string>
+    <string name="idle">Idle</string>
+    <string name="stopped">Stopped</string>
+    <string name="offline">Offline</string>
+    <string name="search_vehicle_here">Search vehicle here</string>
+    <string name="filter_button_description">filter button description</string>
+    <string name="go_back_to_previous_screen">Go back to previous screen</string>
 </resources>
