--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="standard_charger_voltage">12.5 V</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ltrs">Ltrs</string>
+    <string name="diesel">Diesel</string>
+    <string name="adblue">Adblue</string>
+    <string name="major_issue">Major Issue</string>
+    <string name="_9999">9999</string>
+    <string name="location">Location:</string>
 </resources>
